--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -34,13 +34,13 @@
                 <a class="dropdown-item" href="#">My account</a>
                 <a class="dropdown-item" href="#">Change password</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{% url 'accounts:logout' %}">Log out</a>
+                <a class="dropdown-item" href="{% url 'auths:logout' %}">Log out</a>
               </div>
             </li>
           </ul>
           {% else %}
           <form class="form-inline ml-auto">
-            <a href="{% url 'accounts:login' %}" class="btn btn-outline-secondary btn-sm">Log in</a>
+            <a href="{% url 'auths:login' %}" class="btn btn-outline-secondary btn-sm">Log in</a>
           </form>
           {% endif %}
         </div>
