modified base template and app_global.css, deleted breadcrumbs

--- a/project/expenses/templates/expenses/expenses_list.html
+++ b/project/expenses/templates/expenses/expenses_list.html
@@ -1,9 +1,5 @@
-{% extends 'category_expenses.html' %}
+{% extends 'base.html' %}
 
-
-{% block breadcrumb %}{{ block.super }}
-<span class="navbar-text">&raquo;</span><a class="nav-link disabled" href="">Sąrašas</a>
-{% endblock breadcrumb %}
 
 {% block content %}
 content
