--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/app_global.css' %}">
     {% block head %}{% endblock head %}
 
-    <title>Bike statistic</title>
+    <title>Bookeeping</title>
   </head>
 
   <body>
