renamed files and folder

--- a/project/auths/templates/auths/login.html
+++ b/project/auths/templates/auths/login.html
@@ -1,4 +1,4 @@
-{% extends 'accounts/accounts_base.html' %}
+{% extends 'auths/auths_base.html' %}
 
 {% block content %}
                 <div class="card mt-5">
