--- a/project/expenses/templates/expenses/expenses_list.html
+++ b/project/expenses/templates/expenses/expenses_list.html
@@ -2,6 +2,8 @@
 
 
 {% block content %}
-content
+
+<div class="col-8 pl-0">{% include 'expenses/includes/partial_expenses_list.html' %}</div>
+
 {% endblock content %}
 
