--- a/project/expenses/templates/expenses/includes/partial_expenses_list.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_list.html
@@ -1,4 +1,5 @@
-<table class="table table-striped table-hover">
+{% load buttons %}
+<table class="table table-striped table-hover" id="tbl-0">
     <thead class="thead-light">
         <th style="background-color:aliceblue;">Date</th>
         <th style="background-color:bisque;">Category</th>
@@ -6,6 +7,8 @@
         <th class="text-right" style="background-color:bisque;">Quantity</th>
         <th class="text-right">Price</th>
         <th class="text-right" style="background-color:bisque;">Account</th>
+        <th class="text-center" width="50rem;">A</th>
+        <th class="text-center" width="18px" style="padding:0px!important;">E</th>
     </thead>
     <tbody>
         {% for item in objects %}
@@ -16,6 +19,8 @@
             <td class="text-right" style="background-color:bisque;">{{ item.quantity }}</td>
             <td class="text-right">{{ item.price }}</td>
             <td class="text-right" style="background-color:bisque;">{{ item.account }}</td>
+            <td class="text-right" style="background-color:lightgreen;">{% button_edit pk=item.id url='#' tbl='0' %}</td>
+            <td style="background-color:blueviolet;"></td>
         </tr>
         {% endfor %}
     </tbody>
