--- a/project/expenses/templates/expenses/expenses_list.html
+++ b/project/expenses/templates/expenses/expenses_list.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 {% load buttons %}
 
+
+{% block head %}
+    {{ form.media }}
+    <script src="https://code.jquery.com/ui/1.11.3/jquery-ui.min.js"></script>
+{% endblock head %}
+
+
 {% block content %}
 {% url 'expenses:expenses_new' as url_new %}
 <div class="col-8 pl-0">{% include 'expenses/includes/partial_expenses_list.html' %}</div>
