--- a/project/expenses/templates/expenses/includes/partial_expenses_form_modal.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_form_modal.html
@@ -4,7 +4,7 @@
     {% csrf_token %}
     {{ form.media }}
     <div class="modal-header">
-        <h5 class="modal-title">Modal title</h5>
+        <h5 class="modal-title">Išlaidos</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
@@ -32,7 +32,7 @@
 
         <div class="row mb-2">
             <div class="col-sm-4 pt-1" style="background-color:lightgrey">Kaina:</div>
-            <div class="col-8">{{ form.price|as_crispy_field }}</div>
+            <div class="col-8"><input type="text" name="total-sum" class="form-control-sm textinput textInput form-control" id="total-sum"></div>
         </div>
 
         <div class="row mb-2">
@@ -47,7 +47,7 @@
 
         <div class="row mb-2">
             <div class="col-sm-4 pt-1" style="background-color:lightgrey">Visa kaina:</div>
-            <div class="col-8"><input type="number" name="total-sum" class="form-control-sm textinput textInput form-control" id="total-sum" value=0 readonly></div>
+            <div class="col-8">{{ form.price|as_crispy_field }}</div>
         </div>
     </div>
 
@@ -56,11 +56,11 @@
     </div>
 </form>
 <script>
-    var input = document.getElementById("id_price");
+    var input = document.getElementById("total-sum");
     input.addEventListener("keyup", function (event) {
         event.preventDefault();
         if (event.keyCode === 13) {
-            var total_sum = eval(document.getElementById("total-sum").value);
+            var total_sum = eval(document.getElementById("id_price").value);
             var input_value = eval(this.value.replace(',', '.').replace(/[^\d\-\.\+\/\*]/g, ''));
             if (!input_value || input_value === Infinity ) {
                 input_value = 0;
@@ -71,7 +71,7 @@
                 res = 0;
             }
 
-            document.getElementById("total-sum").value = res.toFixed(2);
+            document.getElementById("id_price").value = res.toFixed(2);
             this.value = ''
         }
     });
