--- a/project/expenses/templates/expenses/includes/partial_expenses_form_modal.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_form_modal.html
@@ -11,42 +11,42 @@
     </div>
     <div class="modal-body">
         <div class="row mb-2">
-            <div class="col-sm-4 pt-1" style="background-color:lightgrey">Data:</div>
+            <div class="col-sm-4 pt-1">Data:</div>
             <div class="col-8">{{ form.date|as_crispy_field }}</div>
         </div>
 
         <div class="row mb-2">
-            <div class="col-sm-4 pt-1" style="background-color:lightgrey">Išlaidų rūšis:</div>
+            <div class="col-sm-4 pt-1">Išlaidų rūšis:</div>
             <div class="col-8">{{ form.category|as_crispy_field }}</div>
         </div>
 
         <div class="row mb-2">
-            <div class="col-sm-4 pt-1" style="background-color:lightgrey">Išlaidų pavadinimas:</div>
+            <div class="col-sm-4 pt-1">Išlaidų pavadinimas:</div>
             <div class="col-8">{{ form.sub_category|as_crispy_field }}</div>
         </div>
 
         <div class="row mb-2">
-            <div class="col-sm-4 pt-1" style="background-color:lightgrey">Sąskaita:</div>
+            <div class="col-sm-4 pt-1">Sąskaita:</div>
             <div class="col-8">{{ form.account|as_crispy_field }}</div>
         </div>
 
         <div class="row mb-2">
-            <div class="col-sm-4 pt-1" style="background-color:lightgrey">Kaina:</div>
+            <div class="col-sm-4 pt-1">Kaina:</div>
             <div class="col-8"><input type="text" name="total-sum" class="form-control-sm textinput textInput form-control" id="total-sum"></div>
         </div>
 
         <div class="row mb-2">
-            <div class="col-sm-4 pt-1" style="background-color:lightgrey">Kiekis:</div>
+            <div class="col-sm-4 pt-1">Kiekis:</div>
             <div class="col-8">{{ form.quantity|as_crispy_field }}</div>
         </div>
 
         <div class="row mb-2">
-            <div class="col-sm-4 pt-1" style="background-color:lightgrey">Pastaba:</div>
+            <div class="col-sm-4 pt-1">Pastaba:</div>
             <div class="col-8">{{ form.remark|as_crispy_field }}</div>
         </div>
 
         <div class="row mb-2">
-            <div class="col-sm-4 pt-1" style="background-color:lightgrey">Visa kaina:</div>
+            <div class="col-sm-4 pt-1">Visa kaina:</div>
             <div class="col-8">{{ form.price|as_crispy_field }}</div>
         </div>
     </div>
