changed button label

--- a/project/expenses/templates/expenses/includes/partial_expenses_form_modal.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_form_modal.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="modal-footer">
-        <button type="button" class="btn btn-primary" id="submit">Submit</button>
+        <button type="button" class="btn btn-primary" id="submit">Insert</button>
     </div>
 </form>
 <script>
