--- a/project/expenses/templates/expenses/includes/partial_expenses_form_modal.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_form_modal.html
@@ -53,6 +53,7 @@
 
     <div class="modal-footer">
         <button type="button" class="btn btn-primary" id="submit">Insert</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
     </div>
 </form>
 <script>
