--- a/project/expenses/templates/expenses/includes/partial_expenses_form_modal.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_form_modal.html
@@ -1,6 +1,6 @@
 {% load crispy_forms_tags %}{% load buttons %}
 
-<form method="post" novalidate id="idForm" class="js-create-form" action="{{ url }}" data-sub-category-url="{% url 'expenses:load_sub_categories' %}" autocomplete="off">
+<form method="post" novalidate id="js-form" class="js-form" action="{{ url }}" data-sub-category-url="{% url 'expenses:load_sub_categories' %}" autocomplete="off">
     {% csrf_token %}
     {{ form.media }}
     <div class="modal-header">
@@ -78,7 +78,7 @@
     });
 
     $("#id_category").change(function () {
-        var url = $("#idForm").attr("data-sub-category-url");
+        var url = $("#js-form").attr("data-sub-category-url");
         var categoryId = $(this).val();
 
         $.ajax({
