--- a/project/expenses/templates/expenses/expenses_list.html
+++ b/project/expenses/templates/expenses/expenses_list.html
@@ -13,7 +13,7 @@
 {% url 'expenses:expenses_new' as url_new %}
 <div class="col-8 pl-0">{% include 'expenses/includes/partial_expenses_list.html' %}</div>
 <div class="col-4 px-0">{% button_create url=url_new label='New record' tbl='0' width='100%' %}
-    <div class="modal fade bd-example-modal-lg" id="myModal">
+    <div class="modal fade bd-example-modal-lg" id="modal-form">
         <div class="modal-dialog modal-lg">
             <div class="modal-content"></div>
         </div>
