--- a/project/expenses/templates/expenses/includes/partial_expenses_list.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_list.html
@@ -1,5 +1,5 @@
 {% load buttons %}
-<table class="table table-striped table-hover" id="tbl-0">
+<table class="table table-striped table-hover">
     <thead class="thead-light">
         <th style="background-color:aliceblue;">Date</th>
         <th style="background-color:bisque;">Category</th>
@@ -12,7 +12,8 @@
     </thead>
     <tbody>
         {% for item in objects %}
-        <tr>
+        {% url 'expenses:expenses_update' item.id as url_update %}
+        <tr data-url="{{ url_update }}">
             <td style="background-color:aliceblue;">{{ item.date }}</td>
             <td style="background-color:bisque;">{{ item.category }}</td>
             <td>{{ item.sub_category }}</td>
