form buttons small

--- a/project/expenses/templates/expenses/includes/partial_expenses_form_modal.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_form_modal.html
@@ -52,8 +52,8 @@
     </div>
 
     <div class="modal-footer">
-        <button type="button" class="btn btn-primary" id="submit">Insert</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-sm btn-primary" id="submit">Insert</button>
+        <button type="button" class="btn btn-sm btn-secondary" data-dismiss="modal">Close</button>
     </div>
 </form>
 <script>
