--- a/project/expenses/templates/expenses/includes/partial_expenses_list.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_list.html
@@ -1,27 +1,23 @@
 {% load buttons %}
 <table class="table table-striped table-hover">
     <thead class="thead-light">
-        <th style="background-color:aliceblue;">Date</th>
-        <th style="background-color:bisque;">Category</th>
+        <th>Date</th>
+        <th>Category</th>
         <th>Sub Category</th>
-        <th class="text-right" style="background-color:bisque;">Quantity</th>
+        <th class="text-right">Quantity</th>
         <th class="text-right">Price</th>
-        <th class="text-right" style="background-color:bisque;">Account</th>
-        <th class="text-center" width="50rem;">A</th>
-        <th class="text-center" width="18px" style="padding:0px!important;">E</th>
+        <th class="text-right">Account</th>
     </thead>
     <tbody>
         {% for item in objects %}
         {% url 'expenses:expenses_update' item.id as url_update %}
         <tr data-url="{{ url_update }}">
-            <td style="background-color:aliceblue;">{{ item.date }}</td>
-            <td style="background-color:bisque;">{{ item.category }}</td>
+            <td>{{ item.date }}</td>
+            <td>{{ item.category }}</td>
             <td>{{ item.sub_category }}</td>
-            <td class="text-right" style="background-color:bisque;">{{ item.quantity }}</td>
+            <td class="text-right">{{ item.quantity }}</td>
             <td class="text-right">{{ item.price }}</td>
-            <td class="text-right" style="background-color:bisque;">{{ item.account }}</td>
-            <td class="text-right" style="background-color:lightgreen;">{% button_edit pk=item.id url='#' tbl='0' %}</td>
-            <td style="background-color:blueviolet;"></td>
+            <td class="text-right" {% if item.exception %} style="border-right: 5px solid red;"{% endif %}>{{ item.account }}</td>
         </tr>
         {% endfor %}
     </tbody>
