change modal form size from lg to md

--- a/project/expenses/templates/expenses/expenses_list.html
+++ b/project/expenses/templates/expenses/expenses_list.html
@@ -14,7 +14,7 @@
 <div class="col-8 pl-0" id="ajax-content">{% include 'expenses/includes/partial_expenses_list.html' %}</div>
 <div class="col-4 px-0">{% button_create url=url_new label='New record' width='100%' %}
     <div class="modal fade bd-example-modal-lg" id="modal-form">
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog modal-md">
             <div class="modal-content"></div>
         </div>
     </div>
