--- a/project/expenses/templates/expenses/expenses_list.html
+++ b/project/expenses/templates/expenses/expenses_list.html
@@ -20,15 +20,32 @@
     <div id="ajax-content">{% include 'expenses/includes/partial_expenses_list.html' %}</div>
 </div>
 <div class="col-4 px-0">
-
+    <div class="row my-2">
+        <div class="col text-right">
+            <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="#">Add Expense Type</button>
+            <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="#">Add Expense Name</button>
+        </div>
+    </div>
+    <div id="ajax-content-categories">
     {% for c in categories %}
-        <div><b>{{ c.title }}</b></div>
+    <div class="list-group mb-2">
+        <a href="#" class="list-group-item list-group-item-action list-group-item-primary">{{ c.title }}</a>
         {% for sub in c.expensename_set.all %}
-            <div>{{ sub.title }}</div>
-        {% endfor %}
+        <a href="#" class="list-group-item list-group-item-action">{{ sub.title }}</a>{% endfor %}
+    </div>
     {% endfor %}
-
+    </div>
 </div>
+
+<style>
+    .list-group-item {
+        padding: .25rem 0 .25rem 1.25rem;
+        margin: 0;
+    }
+    .list-group-item.list-group-item-primary {
+        padding-left: 0.25rem;
+    }
+</style>
 <div class="modal fade" id="modal-form">
     <div class="modal-dialog modal-md">
         <div class="modal-content"></div>
