--- a/project/expenses/templates/expenses/includes/partial_expenses_list.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_list.html
@@ -2,8 +2,8 @@
 <table class="table table-striped table-hover">
     <thead class="thead-light">
         <th>Date</th>
-        <th>expense_type</th>
-        <th>Sub expense_type</th>
+        <th>Expense type</th>
+        <th>Expense name</th>
         <th class="text-right">Quantity</th>
         <th class="text-right">Price</th>
         <th class="text-right">Account</th>
