--- a/project/expenses/templates/expenses/expenses_list.html
+++ b/project/expenses/templates/expenses/expenses_list.html
@@ -10,11 +10,11 @@
 
 {% block content %}
 
-{% url 'expenses:expenses_new' as url_new %}
+{% url 'expenses:expenses_new' as url_expense_new %}
 <div class="col-8 pl-0">
     <div class="row my-2">
         <div class="col text-right">
-            <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_new }}">Add Expense</button>
+            <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expense_new }}">Add Expense</button>
         </div>
     </div>
     <div id="ajax-content">{% include 'expenses/includes/partial_expenses_list.html' %}</div>
