--- a/project/expenses/templates/expenses/includes/partial_expenses_type_list.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_type_list.html
@@ -1,8 +1,9 @@
-{% for c in categories %}
+{% for item in categories %}
+{% url 'expenses:expenses_type_update' item.id as url_update %}
 <div class="list-group mb-2">
-    <a href="#" class="list-group-item list-group-item-action list-group-item-primary">{{ c.title }}</a>
-    {% for sub in c.expensename_set.all %}
-    <a href="#" class="list-group-item list-group-item-action">{{ sub.title }}</a>{% endfor %}
+    <a href="#" class="list-group-item list-group-item-action list-group-item-primary" data-url="{{ url_update }}" data-update-container="ajax-content-categories">{{ item.title }}</a>
+    {% for sub in item.expensename_set.all %}
+    <a href="#" class="list-group-item list-group-item-action" data-url="{{ url_update }}" data-update-container="ajax-content-categories">{{ sub.title }}</a>{% endfor %}
 </div>
 {% endfor %}
 
