bind update container in main add buttons

--- a/project/expenses/templates/expenses/expenses_list.html
+++ b/project/expenses/templates/expenses/expenses_list.html
@@ -24,8 +24,8 @@
 <div class="col-4 px-0">
     <div class="row my-2">
         <div class="col text-right">
-            <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expenses_type_new }}">Add Expense Type</button>
-            <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expenses_name_new }}">Add Expense Name</button>
+            <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expenses_type_new }}" data-update-container="ajax-content-categories">Add Expense Type</button>
+            <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expenses_name_new }}" data-update-container="ajax-content-categories">Add Expense Name</button>
         </div>
     </div>
     <div id="ajax-content-categories">{% include 'expenses/includes/partial_expenses_type_list.html' %}</div>
