disable close form on enter key press

--- a/project/expenses/templates/expenses/includes/partial_expenses_type_form.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_type_form.html
@@ -31,4 +31,8 @@
             $('#modal-form').modal("hide");
         }
     });
+
+    $(document).on('submit','.js-form', function(e){
+        e.preventDefault();
+    });
 </script>
