ajax file panaikintas kuriame containeryje reikia updeitinti, containerio id irašytas formoje

--- a/project/expenses/templates/expenses/includes/partial_expenses_name_form.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_name_form.html
@@ -1,6 +1,6 @@
 {% load crispy_forms_tags %}
 
-<form method="post" novalidate id="js-form" class="js-form" action="{{ url }}" data-action="{{ action }}" autocomplete="off" tabindex="-1" data-update-container="-">
+<form method="post" novalidate id="js-form" class="js-form" action="{{ url }}" data-action="{{ action }}" autocomplete="off" tabindex="-1" data-update-container="ajax-content-categories">
     {% csrf_token %}
     {{ form.media }}
     <div class="modal-header">
