--- a/project/expenses/templates/expenses/includes/partial_expenses_name_form.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_name_form.html
@@ -1,35 +1,5 @@
-{% load crispy_forms_tags %}
-
 <form method="post" novalidate id="js-form" class="js-form" action="{{ url }}" data-action="{{ action }}" autocomplete="off" tabindex="-1" data-update-container="ajax-content-categories">
-    {% csrf_token %}
-    {{ form.media }}
-    <div class="modal-header">
-        <h5 class="modal-title">Išlaidų pavadinimas</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    <div class="modal-body">
-        {% if form.non_field_errors %}
-        {% for error in form.non_field_errors %}
-        <div class="alert alert-danger">
-            <strong>{{ error|escape }}</strong>
-        </div>
-        {% endfor %}
-        {% endif %}
-
-        {% for field in form %}
-        <div class="row mb-2">
-            <div class="col-sm-4 pt-1">{{ field.label_tag }}</div>
-            <div class="col-8">{{ field|as_crispy_field }}</div>
-        </div>
-        {% endfor %}
-    </div>
-
-    <div class="modal-footer">
-        <button type="button" class="btn btn-sm btn-primary" id="submit">{{ action|title }}</button>
-        <button type="button" class="btn btn-sm btn-secondary" data-dismiss="modal">Close</button>
-    </div>
+{% include 'expenses/includes/generic_form.html' %}
 </form>
 <script>
     $(document).keydown(function (event) {
