--- a/project/expenses/templates/expenses/includes/generic_form.html
+++ b/project/expenses/templates/expenses/includes/generic_form.html
@@ -1,8 +1,9 @@
 {% load crispy_forms_tags %}
+
 {% csrf_token %}
 {{ form.media }}
 <div class="modal-header">
-    <h5 class="modal-title">Išlaidų pavadinimas</h5>
+    <h5 class="modal-title">{{ title }}</h5>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
@@ -25,6 +26,6 @@
 </div>
 
 <div class="modal-footer">
-    <button type="button" class="btn btn-sm btn-primary" id="submit">{{ action|title }}</button>
+    <button type="button" class="btn btn-sm btn-primary" id="submit">{{ submit_title|title }}</button>
     <button type="button" class="btn btn-sm btn-secondary" data-dismiss="modal">Close</button>
 </div>
