--- a/project/expenses/templates/expenses/expenses_list.html
+++ b/project/expenses/templates/expenses/expenses_list.html
@@ -16,7 +16,7 @@
 <div class="col-8 pl-0">
     <div class="row my-2">
         <div class="col text-right">
-            <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expense_new }}">Add Expense</button>
+            <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expense_new }}"><i class="fas fa-plus"></i> Išlaidas</button>
         </div>
     </div>
     <div id="ajax-content">{% include 'expenses/includes/partial_expenses_list.html' %}</div>
@@ -24,8 +24,8 @@
 <div class="col-4 px-0">
     <div class="row my-2">
         <div class="col text-right">
-            <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expenses_type_new }}">Add Expense Type</button>
-            <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expenses_name_new }}">Add Expense Name</button>
+            <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expenses_type_new }}"><i class="fas fa-plus"></i> Išlaidų rūšį</button>
+            <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expenses_name_new }}"><i class="fas fa-plus"></i> Išlaidų pavadinimą</button>
         </div>
     </div>
     <div id="ajax-content-categories">{% include 'expenses/includes/partial_expenses_type_list.html' %}</div>
