--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -33,7 +33,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if '/expenses/' in request.path %}active{% endif %}" href="{% url 'expenses:expenses_list' %}">Expenses</a>
+            <a class="nav-link {% if '/expenses/' in request.path %}active{% endif %}" href="{% url 'expenses:expenses_list' %}">Išlaidos</a>
           </li>
         </ul>
       </nav>
