--- a/project/expenses/templates/expenses/includes/partial_expenses_type_form.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_type_form.html
@@ -1,5 +1,5 @@
 {% load form %}
-<form method="post" novalidate id="js-form" class="js-form" action="{{ url }}" data-action="{{ action }}" autocomplete="off" tabindex="-1" data-update-container="ajax-content">
+<form method="post" novalidate id="js-form" class="js-form" action="{{ url }}" data-action="{{ action }}" autocomplete="off" tabindex="-1" data-update-container="ajax-content-categories">
 {% generic_form title='Išlaidų rūšis' %}
 </form>
 <script>
