--- a/project/expenses/templates/expenses/includes/partial_expenses_form.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_form.html
@@ -2,7 +2,7 @@
 
 <form method="post" novalidate id="js-form" class="js-form" action="{{ url }}"
     data-sub-expense_type-url="{% url 'expenses:load_expense_name' %}" data-action="{{ action }}" autocomplete="off"
-    tabindex="-1" data-update-container="{{ update_container }}">
+    tabindex="-1" data-update-container="ajax-content">
 {% generic_form title='Išlaidos' %}
 </form>
 
